--- a/Web/CV Site/styles.css
+++ b/Web/CV Site/styles.css
@@ -62,7 +62,7 @@ h1{
 
 #middle{
     margin: 0;
-    height: 500px;
+    height: fit-content;
     background-color: #DAC0A3;
 }
 
@@ -97,7 +97,120 @@ h1{
     #middle{
         height: fit-content;
     }
+    .ab-me{
+        font-size: 18px;
+    }
+    .git{
+        height: 50px;
+        padding-bottom: 10px;
+    }
+    .parcurs-proff{
+        margin: 50px;
+        margin-top: 0;
+        height: fit-content;
+    }
+    footer{
+        font-size: 12px;
+    }
 }
+
+@media (max-width: 1400px){
+    .section-title{
+        font-size: 20px;
+    }
+    .lang{
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 600px){
+    .title{
+        font-size: 30px;
+    }
+
+    .subtitle{
+        font-size: 25px;
+    }
+
+    .subtitle2{
+        font-size: 25px;
+    }
+
+    .github-portf{
+        font-size: 16px;
+    }
+}
+
+.experience {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+    margin: 0;
+}
+
+.skills {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100px;
+    width: 100%;
+    text-align: center;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.section-title {
+    min-height: 50px;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.logos {
+    display: flex;
+    justify-content: center;
+    gap: 20px; 
+    margin-bottom: 20px; 
+}
+
+.logo {
+    width: 30px;
+    height: 30px;
+}
+
+
+.lang {
+    font-size: 18px;
+    font-style: italic;
+    margin-top: 0; 
+}
+
+
+
+@media (max-width: 1050px) {
+    .experience {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .section-title {
+        font-size: 20px;
+    }
+    .lang {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 480px) {
+    .experience {
+        grid-template-columns: 1fr;
+    }
+    .section-title {
+        font-size: 18px;
+    }
+    .lang {
+        font-size: 14px;
+    }
+}
+
 
 .crem{
     color: #FEFAF6
@@ -107,9 +220,9 @@ h1{
     display: grid;
     align-items: center;
     justify-items: center;
-    gap: 10px;
+    gap: 25px;
     width: 900px;
-    height: 1500px;
+    height: fit-content;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 0.5fr 0.1fr 0.3fr 0.3fr 0.3fr 0.3fr 0.3fr 0.3fr 0.3fr;
     margin-bottom: 50px;
@@ -125,7 +238,7 @@ h1{
 }
 
 .git{
-    padding: 20px;
+    padding: 25px;
     text-align: center;
 }
 
